<resources>
    <string name="app_name">EduTest</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <string name="nav_item_test">Tests</string>
    <string name="nav_item_forum">Forum</string>
    <string name="nav_item_result">Results</string>

    <!-- navigation drawer item labels  -->
    <string-array name="nav_drawer_labels">
        <item>@string/nav_item_test</item>
        <item>@string/nav_item_forum</item>
        <item>@string/nav_item_result</item>
    </string-array>

    <string name="title_test">Tests</string>
    <string name="title_forum">Forum</string>
    <string name="title_result">Results</string>
    <string name="past_tests">Past Tests</string>
    <string name="upcoming_tests">Upcoming Tests</string>
    <string name="missed_tests">Missed Tests</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dummytext">00:00</string>
    <string name="questiondummytext">It is easier to roll a stone up a sloping road than to lift it vertical upwards because
    </string>
    <string name="title_activity_sa">sa</string>
    <string name="startTest"> Start Test </string>
    <string name="noofattemptedquestions">Attempted Ques:</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="productName">Study Solo</string>
    <string name="keep_me_signed_in">Keep me signed in</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="enter_username">Please enter your username</string>
    <string name="enter_password">Please enter your password</string>
    <string name="invalid_credentials">Invalid credentials</string>
    <string name="invalid_login">{\"response\":\"Invalid LoginID\"}</string>
    <string name="first_time_login">First time login</string>
    <string name="OK">OK</string>
    <string name="first_time_login_message">Welcome to Study Solo. Please do your first login from our web portal.</string>
    <string name="coaching_id">coachingId</string>
    <string name="batch_id">batchId</string>
    <string name="current_date">currentDate</string>


    //Get Hit params
    <string name="get_test_data"> \"where\": {
                            coaching_id: coachingId,
                            batches: batchId,
                            status: \"submitted\",
                            "teacher_id": "teacherc1t1",
                            window_stop: {
                                gt: currentDate
                            }
                        },
                        \"fields\": {
                            test_id: true,
                            title: true,
                            duration_seconds: true,
                            topics: true,
                            window_start: true,
                            window_stop: true,
                            total_marks: true
                        },
                        \"order\": \"date_updated DESC\"</string>

    <string name="marks">Total marks : </string>
    <string name="duration">Duration : </string>
    <string name="testWindow">Test Window:</string>
    <string name="instructions">Instructions</string>
    <string name="testId">testId</string>
    <string name="test">test</string>
    <string name="title_submit">Submit</string>
</resources>